--- a/training/pix2tex_lora/config.yaml
+++ b/training/pix2tex_lora/config.yaml
@@ -1,13 +1,20 @@
 gpu_devices: null
 no_cuda: false
-batchsize: 6
+batchsize: 32
 micro_batchsize: -1
+
+# Data loading optimizations
+num_workers: 8
+pin_memory: true
+prefetch_factor: 2
 betas: [0.9, 0.999]
-lr: 0.0005
+lr: 0.0003
 
 optimizer: Adam
 scheduler: CosineAnnealingLR
 T_max: 20 # Total number of epochs for the scheduler to run
+warmup_ratio: 0.1  # 10% warmup
+weight_decay: 0.01
 
 # Image/sequence sizes
 channels: 1
@@ -70,7 +77,7 @@ output_path: runs/outputs
 
 # --- RECOMMENDED CHANGE ---
 # Matched testbatchsize to batchsize to prevent potential OOM errors during validation.
-testbatchsize: 6 
+testbatchsize: 32 
 
 valbatches: 50
 wandb: false
@@ -79,3 +86,9 @@ log_interval: 1000
 early_stopping_patience: 3
 early_stopping_min_delta: 0.001
 val_samples_per_batch: 4
+
+# Profiling configuration
+enable_profiling: false
+profile_epochs: [1, 5, 10]  # Profile these specific epochs
+profile_memory: true
+profile_shape: true
